data/derived/comb/progs/unify/prog2274.ml.out
Characters 92-94:
  | Sine(e1) -> sin(pi* eval(e1,x,y));;
                    ^^
Error: This expression has type float but an expression was expected of type
         int
